# ghsa-cli

./: LICENSE  README.md  pyproject.toml
src/: ghsa_cli.py
src/ghsa_cli/: __init__.py  __main__.py
tests/: test_ghsa_cli.py
