[project]
dynamic = ['version', 'description']
name = 'ghsa-cli'
readme = "README.md"
license = 'MIT'
authors = [
    {name = 'Seth Larson', email = 'sethmichaellarson@gmail.com'}
]
requires-python = '>=3.14'
requires = [
    'urllib3>=2',
]

[project.scripts]
ghsa-cli = "ghsa_cli:main"

[build-system]
requires = ['flit-core>=3.11,<4']
build-backend = 'flit_core.buildapi'
